--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.8, 3.9]
 
     steps:
       - uses: actions/checkout@v2
@@ -41,9 +41,6 @@ jobs:
         if: failure()
         uses: andymckay/cancel-action@0.2
 
-      - name: Check formatting with black
-        run: black --check .
-
   # Execute pytest to check PyonFX's functionalities
   test:
     name: "Test (${{matrix.os}}, Python ${{ matrix.python-version }})"
@@ -51,7 +48,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.8, 3.9]
 
     steps:
       - uses: actions/checkout@v2
