update setup install

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,8 +68,8 @@ jobs:
       - name: Install fonts (non-Windows)
         if: matrix.os != 'windows-latest'
         run: |
-          GO111MODULE=on GOBIN=$HOME/.local/bin go get github.com/Crosse/font-install@v1.4.1
-          $HOME/.local/bin/font-install https://mirrors.tuna.tsinghua.edu.cn/osdn/mix-mplus-ipa/58720/migu-1p-20130430.zip
+          wget https://mirrors.tuna.tsinghua.edu.cn/osdn/mix-mplus-ipa/58720/migu-1p-20130430.zip
+          $HOME/.local/bin/font-install migu-1p-20130430.zip
         shell: bash
       - name: Install fonts (Windows)
         if: matrix.os == 'windows-latest'
