--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
         shell: bash
       - name: Install fonts (Windows)
         if: matrix.os == 'windows-latest'
-        run: powershell ./.github/scripts/install-fonts.ps1 https://mirrors.tuna.tsinghua.edu.cn/osdn/mix-mplus-ipa/58720/migu-1p-20130430.zip
+        run: powershell ./.github/scripts/install-fonts.ps1 https://mirrors.gigenet.com/OSDN//mix-mplus-ipa/58720/migu-1p-20130430.zip
         shell: pwsh
 
       - name: Cache Python
