--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,7 +1,9 @@
 [mypy]
 mypy_path = ./stubs/
 
-python_version = 3.9
+python_version = 3.10
+
+plugins = numpy.typing.mypy_plugin
 
 ignore_missing_imports = False
 
@@ -37,7 +39,7 @@ error_summary = True
 pretty = True
 
 [mypy-numpy]
-ignore_errors = True
+ignore_errors = False
 
 [mypy-skimage]
 ignore_errors = True
