--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,20 @@ examples/scripts/
 
 # VS Code stuff
 .vscode/
+
+My stuff
+Yutils-T1/
+ichunjo.png
+RODINBOKUTOHPRO-B (2).OTF
+RODINBOKUTOHPRO-B.OTF
+test_out.ass
+test.ass
+test.png
+test.txt
+test2.py
+test3.py
+test22.py
+test33.py
+test44.py
+test66.py
+test77.py
