--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: [3.9]
+        python-version: ['3.9', '3.10']
 
     steps:
       - uses: actions/checkout@v2
@@ -48,7 +48,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.9]
+        python-version: ['3.9', '3.10']
 
     steps:
       - uses: actions/checkout@v2
@@ -69,12 +69,11 @@ jobs:
         if: matrix.os != 'windows-latest'
         run: |
           GO111MODULE=on GOBIN=$HOME/.local/bin go get github.com/Crosse/font-install@v1.4.1
-          wget https://mirrors.tuna.tsinghua.edu.cn/osdn/mix-mplus-ipa/58720/migu-1p-20130430.zip
-          $HOME/.local/bin/font-install migu-1p-20130430.zip
+          $HOME/.local/bin/font-install "https://osdn.net/frs/redir.php?m=gigenet&f=mix-mplus-ipa%2F58720%2Fmigu-1p-20130430.zip"
         shell: bash
       - name: Install fonts (Windows)
         if: matrix.os == 'windows-latest'
-        run: powershell ./.github/scripts/install-fonts.ps1 https://mirrors.gigenet.com/OSDN//mix-mplus-ipa/58720/migu-1p-20130430.zip
+        run: ./.github/scripts/install-fonts.ps1 'https://osdn.net/frs/redir.php?m=gigenet&f=mix-mplus-ipa%2F58720%2Fmigu-1p-20130430.zip'
         shell: pwsh
 
       - name: Cache Python
