update ci and packaging

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,9 +1,7 @@
 [mypy]
 mypy_path = ./stubs/
 
-python_version = 3.10
-
-plugins = numpy.typing.mypy_plugin
+; plugins = numpy.typing.mypy_plugin
 
 ignore_missing_imports = False
 
@@ -54,4 +52,10 @@ ignore_errors = True
 ignore_errors = True
 
 [mypy-win32helper]
+ignore_errors = True
+
+[mypy-cairo]
+ignore_errors = True
+
+[mypy-gi]
 ignore_errors = True
