--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-.
+more_itertools==8.12.0
+numpy==1.22.0
+opencv_python==4.5.5.62
+pycairo==1.20.1; sys_platform == "linux" or sys_platform == "darwin"
+PyGObject==3.42.0; sys_platform == "linux" or sys_platform == "darwin"
+pywin32==303; sys_platform == "win32"
+scikit_image==0.19.1
+typing_extensions==4.0.1
+win32gui==221.6; sys_platform == "win32"
