--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,9 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ['3.8','3.9', '3.10']
+        os: [ubuntu-latest, macos-latest, windows-2022]
+        # python-version: ['3.8','3.9', '3.10']
+        python-version: ['3.10']
 
     steps:
       - uses: actions/checkout@v2
@@ -44,9 +45,9 @@ jobs:
       - name: Running mypy
         run: mypy pyonfx --python-version ${{ matrix.python-version }}
 
-      - name: Cancelling pipeline (failed)
-        if: failure()
-        uses: andymckay/cancel-action@0.2
+      # - name: Cancelling pipeline (failed)
+      #   if: failure()
+      #   uses: andymckay/cancel-action@0.2
 
   # Execute pytest to check PyonFX's functionalities
   test:
