--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,4 @@ PyGObject==3.42.0; sys_platform == "linux" or sys_platform == "darwin"
 pywin32==303; sys_platform == "win32"
 scikit_image==0.19.1
 typing_extensions==4.0.1
-win32gui==221.6; sys_platform == "win32"
+# win32gui; sys_platform == "win32"
