--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-2022]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ['3.8','3.9', '3.10']
 
     steps:
@@ -60,7 +60,7 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-2022]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ['3.8','3.9', '3.10']
 
     steps:
@@ -80,14 +80,14 @@ jobs:
         run: brew install pygobject3 gtk+3 cairo py3cairo pkg-config
 
       - name: Install fonts (non-Windows)
-        if: matrix.os != 'windows-2022'
+        if: matrix.os != 'windows-latest'
         run: |
           GO111MODULE=on GOBIN=$HOME/.local/bin go get github.com/Crosse/font-install@v1.4.1
           $HOME/.local/bin/font-install "https://osdn.net/frs/redir.php?m=gigenet&f=mix-mplus-ipa%2F58720%2Fmigu-1p-20130430.zip"
 
         shell: bash
       - name: Install fonts (Windows)
-        if: matrix.os == 'windows-2022'
+        if: matrix.os == 'windows-latest'
         run: ./.github/scripts/install-fonts.ps1 'https://osdn.net/frs/redir.php?m=gigenet&f=mix-mplus-ipa%2F58720%2Fmigu-1p-20130430.zip'
         shell: pwsh
 
