fix various bugs

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,7 +1,7 @@
 [mypy]
 mypy_path = ./stubs/
 
-plugins = numpy.typing.mypy_plugin
+plugins = numpy.typing.mypy_plugin, loguru_mypy
 
 ignore_missing_imports = False
 
