--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,8 @@
-flake8==5.0.4
-mypy==0.982
-loguru-mypy==0.0.4
-pytest==7.1.3
-pytest_check==1.0.10
-sphinx-panels==0.6.0
-sphinx-rtd-theme==1.0.0
-pywin32-stubs==1.0.7; sys_platform == "win32"
+flake8~=5.0.4
+mypy~=0.982
+loguru-mypy~=0.0.4
+pytest~=7.1.3
+pytest_check~=1.0.10
+sphinx-panels~=0.6.0
+sphinx-rtd-theme~=1.0.0
+pywin32-stubs~=1.0.7; sys_platform == "win32"
