--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-loguru==0.6.0
-more_itertools==8.14.0
-numpy==1.23.3
-opencv_python==4.6.0.66
-pycairo==1.21.0; sys_platform == "linux" or sys_platform == "darwin"
-PyGObject==3.42.2; sys_platform == "linux" or sys_platform == "darwin"
+loguru~=0.6.0
+more_itertools~=8.14.0
+numpy~=1.23.3
+opencv_python~=4.6.0.66
+pycairo~=1.20.1; sys_platform == "linux" or sys_platform == "darwin"
+PyGObject~=3.42.2; sys_platform == "linux" or sys_platform == "darwin"
 pywin32==304; sys_platform == "win32"
-scikit_image==0.19.3
-typing_extensions==4.4.0
+scikit_image~=0.19.3
+typing_extensions~=4.4.0
 # win32gui; sys_platform == "win32"
