--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,12 +73,14 @@ jobs:
 
       - name: Install platform-specific requirements (Ubuntu)
         if: matrix.os == 'ubuntu-latest'
-        run: sudo apt-get install libgirepository1.0-dev gcc libcairo2-dev pkg-config python3-dev gir1.2-gtk-3.0 python3-gi python3-gi-cairo
+        run: |
+          sudo apt-get update
+          sudo apt-get install libgirepository1.0-dev gcc libcairo2-dev pkg-config python3-dev gir1.2-gtk-3.0 python3-gi python3-gi-cairo
 
        # brew is very slow sometimes. TODO: speedup brew by using caching.
       - name: Install platform-specific requirements (macOS)
         if: matrix.os == 'macos-latest'
-        run: brew install pygobject3 gtk+3 cairo py3cairo pkg-config
+        run: brew install python py3cairo pygobject3 pango
 
       - name: Install fonts (non-Windows)
         if: matrix.os != 'windows-2022'
